--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Portfolio — Your Name</title>
+  <title>Portfolio — Rishi Prasad</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -80,7 +80,7 @@
         <div class="logo">YN</div>
         <div>
           <h1>Your Name</h1>
-          <div class="subtitle">Software developer • Designer • AI tinkerer</div>
+          <div class="subtitle">ML Model developer • Designer • AI tinkerer</div>
         </div>
       </div>
       <nav>
@@ -97,11 +97,10 @@
             <div class="avatar"></div>
             <div style="flex:1">
               <div class="eyebrow">Hi, I am</div>
-              <h2 style="margin:0">Your Name — building delightful apps</h2>
-              <p class="lead">I design and develop full‑stack apps. I like clean interfaces, fast code and tiny animations. Currently exploring ML + product design.</p>
+              <h2 style="margin:0">Rishi Prasad — building delightful apps</h2>
+              <p class="lead">I design and develop ML apps. I like clean interfaces, fast code and tiny animations. Currently exploring ML + product design.</p>
               <div class="tags">
-                <div class="tag">React</div>
-                <div class="tag">Flutter</div>
+                <div class="tag">C++</div>
                 <div class="tag">Python</div>
                 <div class="tag">AI</div>
                 <div class="tag">Open Source</div>
