--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
-  <meta name="description" content="Personal portfolio" />
+  <meta name="description" content="Personal portfolio of Rishi Prasad" />
   <style>
     :root{
       --bg: #0f1724;
@@ -77,16 +77,17 @@
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo">YN</div>
+        <div class="logo">RP</div>
         <div>
-          <h1>Your Name</h1>
-          <div class="subtitle">ML Model developer • Designer • AI tinkerer</div>
+          <h1>Rishi Prasad</h1>
+          <div class="subtitle">ML Model Developer • Designer • AI Enthusiast</div>
         </div>
       </div>
       <nav>
         <a class="btn" href="#projects">Projects</a>
         <a class="btn" href="#about">About</a>
         <a class="btn" href="#contact">Contact</a>
+        <a class="btn" href="resume.pdf" target="_blank">Resume</a>
       </nav>
     </header>
 
@@ -98,7 +99,7 @@
             <div style="flex:1">
               <div class="eyebrow">Hi, I am</div>
               <h2 style="margin:0">Rishi Prasad — building delightful apps</h2>
-              <p class="lead">I design and develop ML apps. I like clean interfaces, fast code and tiny animations. Currently exploring ML + product design.</p>
+              <p class="lead">I design and develop ML-powered apps with a focus on clean interfaces, fast code, and tiny animations. Currently exploring ML + product design.</p>
               <div class="tags">
                 <div class="tag">C++</div>
                 <div class="tag">Python</div>
@@ -109,56 +110,53 @@
           </div>
 
           <section id="projects" class="projects">
-            <h3 style="margin:12px 0 8px">Selected projects</h3>
+            <h3 style="margin:12px 0 8px">Selected Projects</h3>
             <div class="projects-grid">
               <div class="project">
                 <div class="meta">
-                  <h3>Project One</h3>
-                  <p>Small description about the project and tech used.</p>
+                  <h3>ML Image Classifier</h3>
+                  <p>Built a CNN model with TensorFlow to classify images with 95% accuracy.</p>
                 </div>
-                <div style="color:var(--muted);font-size:13px">GitHub</div>
+                <a href="#" style="color:var(--muted);font-size:13px">GitHub</a>
               </div>
-
               <div class="project">
                 <div class="meta">
-                  <h3>Project Two</h3>
-                  <p>One‑liner about the idea.</p>
+                  <h3>Portfolio Website</h3>
+                  <p>Designed and coded my personal portfolio from scratch.</p>
                 </div>
-                <div style="color:var(--muted);font-size:13px">Live</div>
+                <a href="#" style="color:var(--muted);font-size:13px">Live</a>
               </div>
-
               <div class="project">
                 <div class="meta">
-                  <h3>Project Three</h3>
-                  <p>Note about scale and tech.</p>
+                  <h3>Data Dashboard</h3>
+                  <p>Interactive dashboard for visualizing and exploring datasets.</p>
                 </div>
-                <div style="color:var(--muted);font-size:13px">Demo</div>
+                <a href="#" style="color:var(--muted);font-size:13px">Demo</a>
               </div>
-
             </div>
           </section>
         </div>
 
         <section id="about" style="margin-top:18px">
           <div class="side-card">
-            <h3 style="margin:0 0 8px">About me</h3>
-            <p style="margin:0;color:var(--muted)">I am a developer who focuses on building productized ML tools and polished front-end experiences. I enjoy learning new stacks and mentoring others.</p>
+            <h3 style="margin:0 0 8px">About Me</h3>
+            <p style="margin:0;color:var(--muted)">I am a developer who focuses on building production-ready ML tools and polished front-end experiences. I enjoy exploring new stacks and mentoring others in tech.</p>
           </div>
         </section>
       </div>
 
       <aside>
         <div class="side-card">
-          <div class="meta-row"><div>Location</div><div>City, Country</div></div>
+          <div class="meta-row"><div>Location</div><div>India</div></div>
           <div style="height:12px"></div>
           <div class="meta-row"><div>Email</div><div>you@domain.com</div></div>
           <div style="height:12px"></div>
-          <div class="meta-row"><div>Twitter</div><div>@you</div></div>
+          <div class="meta-row"><div>LinkedIn</div><div>/in/rishiprasad</div></div>
           <div style="height:18px"></div>
-          <div style="font-size:13px;color:var(--muted)">Quick contact</div>
+          <div style="font-size:13px;color:var(--muted)">Quick Contact</div>
           <div style="margin-top:10px;display:flex;gap:8px">
-            <a class="btn" href="#contact">Message</a>
-            <a class="btn" href="#">Resume</a>
+            <a class="btn" href="mailto:you@domain.com">Message</a>
+            <a class="btn" href="resume.pdf" target="_blank">Resume</a>
           </div>
         </div>
 
@@ -168,20 +166,21 @@
           <div style="display:flex;flex-direction:column;gap:8px;margin-top:8px">
             <div class="tag">UI · UX</div>
             <div class="tag">Frontend</div>
-            <div class="tag">ML</div>
+            <div class="tag">Machine Learning</div>
+            <div class="tag">Data Visualization</div>
           </div>
         </div>
       </aside>
     </main>
 
     <footer id="contact">
-      <div style="margin-bottom:8px">Want something built? Reach out — you@domain.com</div>
-      <div style="color:var(--muted)">© Your Name • Built with simple HTML & CSS • Deploy on Vercel</div>
+      <div style="margin-bottom:8px">Want to work together? Reach out — <a href="mailto:you@domain.com" style="color:#fff">you@domain.com</a></div>
+      <div style="color:var(--muted)">© 2025 Rishi Prasad • Built with HTML & CSS • Deployed on Vercel</div>
     </footer>
   </div>
 
   <script>
-    // tiny enhancement: smooth scroll for internal links
+    // Smooth scroll for internal links
     document.querySelectorAll('a[href^="#"]').forEach(a=>{
       a.addEventListener('click', e=>{
         e.preventDefault();
