--- a/index.html
+++ b/index.html
@@ -59,10 +59,60 @@
 
     section.projects{margin-top:22px}
     .projects-grid{display:grid;gap:12px}
-    .project{padding:14px;border-radius:12px;background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);display:flex;align-items:center;justify-content:space-between}
+
+    /* Regular project style */
+    .project{
+      padding:14px;
+      border-radius:12px;
+      background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+    }
     .project .meta{display:flex;flex-direction:column}
     .project h3{margin:0;font-size:15px}
     .project p{margin:4px 0 0;color:var(--muted);font-size:13px}
+
+    /* Special project card with preview */
+    .project-card {
+      position: relative;
+      overflow: hidden;
+      border-radius: 12px;
+      background: var(--glass);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .project-card:hover {
+      transform: scale(1.03);
+      box-shadow: 0 12px 30px rgba(0,0,0,0.25);
+    }
+    .project-preview {
+      width: 100%;
+      height: 180px;
+      overflow: hidden;
+    }
+    .project-preview iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+      transform: scale(1);
+      transition: transform 0.4s ease;
+    }
+    .project-card:hover .project-preview iframe {
+      transform: scale(1.1);
+    }
+    .project-info {
+      padding: 15px;
+    }
+    .project-info h3 {
+      margin: 0;
+      font-size: 16px;
+    }
+    .project-info p {
+      font-size: 13px;
+      color: var(--muted);
+      margin: 4px 0 0;
+    }
 
     footer{margin-top:36px;color:var(--muted);font-size:13px;text-align:center}
 
@@ -132,6 +182,19 @@
                   <p>Interactive dashboard for visualizing and exploring datasets.</p>
                 </div>
                 <a href="#" style="color:var(--muted);font-size:13px">Demo</a>
+              </div>
+
+              <!-- New Drosophila App Project -->
+              <div class="project-card">
+                <a href="https://drosophila-stages-identification-app.streamlit.app" target="_blank">
+                  <div class="project-preview">
+                    <iframe src="https://drosophila-stages-identification-app.streamlit.app" loading="lazy"></iframe>
+                  </div>
+                  <div class="project-info">
+                    <h3>Drosophila Stages Identification App</h3>
+                    <p>AI-powered tool for identifying Drosophila life stages. Built using Streamlit & deep learning.</p>
+                  </div>
+                </a>
               </div>
             </div>
           </section>
